feat: transformation features

--- a/model_diabetes.ipynb
+++ b/model_diabetes.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-12T19:56:30.836879Z",
-     "start_time": "2024-04-12T19:56:30.829678Z"
+     "end_time": "2024-04-15T20:35:52.635947Z",
+     "start_time": "2024-04-15T20:35:52.633015Z"
     }
    },
    "source": [
@@ -16,13 +16,13 @@
     "import seaborn as sns"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-12T19:58:25.964533Z",
-     "start_time": "2024-04-12T19:58:25.954625Z"
+     "end_time": "2024-04-15T20:35:52.643839Z",
+     "start_time": "2024-04-15T20:35:52.638157Z"
     }
    },
    "cell_type": "code",
@@ -33,13 +33,13 @@
    ],
    "id": "337f3296b3764c4b",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-12T19:58:43.532986Z",
-     "start_time": "2024-04-12T19:58:43.521946Z"
+     "end_time": "2024-04-15T20:37:10.610897Z",
+     "start_time": "2024-04-15T20:37:10.597294Z"
     }
    },
    "cell_type": "code",
@@ -53,26 +53,26 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 100 entries, 0 to 99\n",
       "Data columns (total 6 columns):\n",
-      " #   Column       Non-Null Count  Dtype \n",
-      "---  ------       --------------  ----- \n",
-      " 0   id_paciente  100 non-null    int64 \n",
-      " 1   genero       100 non-null    object\n",
-      " 2   idade        100 non-null    int64 \n",
-      " 3   peso         100 non-null    int64 \n",
-      " 4   altura       100 non-null    int64 \n",
-      " 5   resultado    100 non-null    int64 \n",
-      "dtypes: int64(5), object(1)\n",
-      "memory usage: 4.8+ KB\n"
+      " #   Column     Non-Null Count  Dtype\n",
+      "---  ------     --------------  -----\n",
+      " 0   idade      100 non-null    int64\n",
+      " 1   peso       100 non-null    int64\n",
+      " 2   altura     100 non-null    int64\n",
+      " 3   resultado  100 non-null    int64\n",
+      " 4   genero_F   100 non-null    int64\n",
+      " 5   genero_M   100 non-null    int64\n",
+      "dtypes: int64(6)\n",
+      "memory usage: 4.8 KB\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-12T20:00:35.352332Z",
-     "start_time": "2024-04-12T20:00:35.339469Z"
+     "end_time": "2024-04-15T20:35:52.668786Z",
+     "start_time": "2024-04-15T20:35:52.660019Z"
     }
    },
    "cell_type": "code",
@@ -217,12 +217,223 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-15T20:35:52.673628Z",
+     "start_time": "2024-04-15T20:35:52.670106Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Remover id_pacinete\n",
+    "\n",
+    "df_exames.drop(\n",
+    "    columns=['id_paciente'], \n",
+    "    axis=1, \n",
+    "    inplace=True\n",
+    ")"
+   ],
+   "id": "99e8e2ed0cacfc41",
+   "outputs": [],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-15T20:35:52.680919Z",
+     "start_time": "2024-04-15T20:35:52.675462Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Converter uma variavel categoria (Genero) em numerica, usando One-hot Encoding\n",
+    "\n",
+    "df_exames = pd.get_dummies(\n",
+    "    df_exames, \n",
+    "    columns=['genero'],\n",
+    "    dtype='int64'\n",
+    ")"
+   ],
+   "id": "d135ca8eebf462e5",
+   "outputs": [],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-15T20:37:05.657127Z",
+     "start_time": "2024-04-15T20:37:05.632898Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_exames",
+   "id": "3386ed76c0c59a57",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "    idade  peso  altura  resultado  genero_F  genero_M\n",
+       "0      46    83     165         98         0         1\n",
+       "1      23    83     164         82         1         0\n",
+       "2      39    71     154         93         0         1\n",
+       "3      26   103     165         95         1         0\n",
+       "4      27    55     176        100         0         1\n",
+       "..    ...   ...     ...        ...       ...       ...\n",
+       "95     52    96     183         89         1         0\n",
+       "96     68   108     169        105         1         0\n",
+       "97     21    95     154        125         0         1\n",
+       "98     41   109     173        128         0         1\n",
+       "99     28    86     191         95         1         0\n",
+       "\n",
+       "[100 rows x 6 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idade</th>\n",
+       "      <th>peso</th>\n",
+       "      <th>altura</th>\n",
+       "      <th>resultado</th>\n",
+       "      <th>genero_F</th>\n",
+       "      <th>genero_M</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>46</td>\n",
+       "      <td>83</td>\n",
+       "      <td>165</td>\n",
+       "      <td>98</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23</td>\n",
+       "      <td>83</td>\n",
+       "      <td>164</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>39</td>\n",
+       "      <td>71</td>\n",
+       "      <td>154</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>26</td>\n",
+       "      <td>103</td>\n",
+       "      <td>165</td>\n",
+       "      <td>95</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>27</td>\n",
+       "      <td>55</td>\n",
+       "      <td>176</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>52</td>\n",
+       "      <td>96</td>\n",
+       "      <td>183</td>\n",
+       "      <td>89</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>68</td>\n",
+       "      <td>108</td>\n",
+       "      <td>169</td>\n",
+       "      <td>105</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>21</td>\n",
+       "      <td>95</td>\n",
+       "      <td>154</td>\n",
+       "      <td>125</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>41</td>\n",
+       "      <td>109</td>\n",
+       "      <td>173</td>\n",
+       "      <td>128</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>28</td>\n",
+       "      <td>86</td>\n",
+       "      <td>191</td>\n",
+       "      <td>95</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 6 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 19
   }
  ],
  "metadata": {
